test(ApplicationTest): 테스트케이스 추가